Revision history for Perl extension Module::Build.

0.27_07

 - The notes() method now returns the new value when called with two
   arguments, just like when it's called with one argument. [Tyler
   MacDonald]

0.27_06  Mon Jan 23 21:44:54 CST 2006

 - Fixed an undefined-variable warning when building the META.yml file
   and the author hasn't used the 'module_name' mechanism. [Chris Dolan]

 - We should now work with recent (> 0.49) versions of YAML.pm when
   creating the META.yml file. [Yitzchak Scott-Thoennes]

 - The y_n() method now requires the default parameter, and the
   prompt() and y_n() methods have been improved with respect to
   how they behave/detect when there is no user to ask.  We're now
   more consistent with MakeMaker, including respecting the
   PERL_MM_USE_DEFAULT environment variable. [Tyler MacDonald and
   Yitzchak Scott-Thoennes]

 - When building a README file using Pod::Text, work around a bug in
   Pod::Text 3.01, which expects Pod::Simple::parse_file to take input
   and output filehandles when it actually only takes an input
   filehandle. [Yitzchak Scott-Thoennes]

0.27_05  Thu Jan 12 17:39:21 CST 2006

 - In t/common.pl, we were attempting to let the user's installed
   Test::More take precedence over ours, but getting thwarted by all
   the test scripts' loading Test::More beforehand.  Fixed. [Spotted
   by Yitzchak Scott-Thoennes]

 - In various test scripts, we were outputting some strings that
   weren't strictly conformant with Test::Harness's expected input,
   though it didn't actually cause problems.  Now we're more
   conformant, though not yet strict. [Spotted by Yitzchak
   Scott-Thoennes]

0.27_04  Fri Dec 23 10:43:34 CST 2005

 - Removed experimental feature that extended the prerequisite system
   to apply ('requires', 'recommends', and 'conflicts') prereqs to all
   actions. Most of the internal extensiblity has been retained so
   that prereq types can easily be added, more selectively.
